--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -71,6 +71,7 @@
   font-family: 'Roboto';
   font-weight: 600;
   margin-top: 15px;
+  cursor: pointer;
 }
 @media screen and (min-width: 768px) {
   .loginBtn {
